tests/invalid/runtime/io_write_type_binary.pts
import Io;
import Fs;

function main() : void {
    string path = Io.tempPath();
    BinaryFile f = Io.openBinary(path, "w");
    try {
        f.write("abc");
    } finally {
        f.close();
        if (Fs.exists(path)) Fs.rm(path);
    }
}
